# shpp

./: .gitignore  INSTALL  INSTALL.org  Makefile  PROJECT_INFO  README  README.org  TODO.org  rules.mk  todo.org
deprecated/modules/: configure.in  main_module.in  make_installer.in
doc/: Makefile  babel.org  sh_makefile  shpp.1  shpp.org
src/: Makefile  opt_strings  opt_strings.org  sh_makefile  shpp.in.sh  shpp.pl
src/Shpp/: Babel.pm  Bind.pm  Expr.pm
src/modules/: org-mode
src/modules/std/: heredoc  import  pshift
src/sh_make/: libsh_make.sh.in  sh_make.sh.in  sh_makefile  tet
src/sh_make/modules/: configure.in  main_module.in  make_installer.in
src/sh_make/tools/: simple_shmake
src/share/: license_header.sh.in  tools.sh.in
src/share/macros/SHMK/: detect_tools  which
src/share/macros/std/: import
src/shpp/: Makefile  else_test  opt_strings  sh_makefile  shpp  shpp.in  shpp.in.sh  shpp.sh.im  tet
src/shpp/modules/SHMK/: input
src/shpp/modules/std/: from  import
src/shpp/shmk_local/: do_tests
src/shpp/tests/: Makefile  else_test  else_test.sh  ifdef_test  ifdef_test.sh  include_noparse_test.sh  macro_test.sh  macro_test.shpp  shortifdef_test  shortifdef_test.sh
src/tests/: Makefile  else_test.sh  ifdef_multiple_arguments_test.sh  ifdef_priv_test.sh  ifdef_test.sh  include_parser_shpp.sh  include_test.sh  include_test_fragment  include_test_take.sh  include_test_take.shpp  link_test.sh  link_test.shpp  replace_var_recu_test.sh  replace_var_test.sh  tests.mk  var_dir_count_test.sh  var_dir_count_test.shpp  variable_argument_test.sh
tools/: emacs_jorg.el  git_ChangeLog  git_refgen  git_revgen  groff-to-wiki.pl
